latest copy of 09-10-2024

--- a/src/app/PerformanceManagement/goal-setting-nanalytics-hr/goal-setting-nanalytics-hr.component.html
+++ b/src/app/PerformanceManagement/goal-setting-nanalytics-hr/goal-setting-nanalytics-hr.component.html
@@ -571,7 +571,7 @@
                                                                 <ng-multiselect-dropdown #dropdown
                                                                     [settings]="dropdownSettings"
                                                                     formControlName="employee"
-                                                                    [data]="empdata">     
+                                                                    [data]="transformedItems">     
                                                                 </ng-multiselect-dropdown>   
                                                                 <div *ngIf="GoalSettingReqForm.get('employee')?.invalid && GoalSettingReqForm.get('employee')?.touched" class="text-danger">
                                                                     *Required!
