--- a/src/app/competency/competency-master/competency-master.component.html
+++ b/src/app/competency/competency-master/competency-master.component.html
@@ -312,7 +312,7 @@
                                                             <label class="form-label font-type fw-semibold">Competency</label>
                                                             <input type="text" class="form-control font-type textbox-15" placeholder="Enter the Competency" required formControlName="competency">
                                                             <div *ngIf="AddCompetencyForm.get('competency')?.invalid && AddCompetencyForm.get('competency')?.touched" class="text-danger">
-                                                                Please enter reason!
+                                                                Required!
                                                             </div>
                                                         </div>
                                                     </div>
