--- a/src/app/employee/employee-master-report/employee-master-report.component.html
+++ b/src/app/employee/employee-master-report/employee-master-report.component.html
@@ -79,7 +79,7 @@
                                                         <button id="openalert2"   class="nav-link font-type" data-bs-toggle="tab"  role="tab" href="#Documents" (click)="ontabselected('D')">Documents</button>
                                                 </li>
         
-                                                <li class="nav-item">
+                                                <li class="nav-item" *ngIf="grpname.includes('LM-HR')">
                                                         <button id="openalert3"  class="nav-link font-type" data-bs-toggle="tab"  role="tab" href="#Bank-Salary" (click)="ontabselected('S')">Bank-Salary</button>
                                                 </li>
                                                 <li class="nav-item">
