--- a/src/app/attendance/shiftassignment/shiftassignment.component.html
+++ b/src/app/attendance/shiftassignment/shiftassignment.component.html
@@ -75,6 +75,7 @@
                                                     <option value="-1">Select</option>
                                                     <option  *ngFor="let shifts of listshift" value="{{shifts.VALUE_FIELD}}">{{shifts.DISPLAY_FIELD}}</option>
                                                     <option value="0">Week Off</option>
+                                                    <option value="-2">Not Applicable</option> 
                                                 </select>                                           
                                              </div>
                                              <div class="col-lg-3 pt-4">
@@ -425,7 +426,8 @@
                                                         <option  *ngFor="let ShiftList of listshift"  [ngValue]="ShiftList">
                                                                 {{ShiftList.DISPLAY_FIELD}}
                                                         </option>  
-                                                        <option value="0">Week Off</option>                                                                     
+                                                        <option value="0">Week Off</option>    
+                                                        <option value="-2">Not Applicable</option>                                                                  
                                                     </select>
                                                     <div *ngIf="EditShiftForm.get('newshift')!.hasError('required') && EditShiftForm.get('newshift')!.touched" class="text-danger">
                                                         Please, select the new shift.
