--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -63,7 +63,7 @@
                                     <div class="card-header align-items-center d-flex p-2">
                                         <h4 class="card-title mb-0 flex-grow-1 font-type fw-semibold">Employee Average Tenure</h4>
                                         <div class="d-flex align-items-center">
-                                            <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(1)">
+                                            <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(1)">
                                                 <i class="ri-file-excel-line"></i>
                                             </button>
                                             <select class="form-select form-select-sm font-type fs-11" aria-label="Select Department" style="width:150px" name="dept" [(ngModel)]="selectedDept" (change)="onDeptChangeEmp_Tenure()">
@@ -92,7 +92,7 @@
                                     <div class="card-header align-items-center d-flex p-2">
                                         <h4 class="card-title mb-0 flex-grow-1 font-type fw-semibold">Employee Turnover</h4>
                                         <div class="d-flex align-items-center">
-                                            <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(5)">
+                                            <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(5)">
                                                 <i class="ri-file-excel-line"></i>
                                             </button>
                                             <div>
@@ -119,7 +119,7 @@
 
                             <!--Average Training Hours-->
                             <div class="col-xl-12 col-lg-12 col-md-12">
-                                <div class="card card-animate shadow-lg  card-height-100">
+                                <div class="card card-animate shadow-lg  pb-0">
                                     <div class="card-header p-2">
                                         <div class="row align-items-center gy-3">
                                             <div class="col-sm">
@@ -128,7 +128,7 @@
                                             <div class="col-sm-auto">
                                                 <div class="d-flex gap-1 flex-wrap">
                                                     <div class="d-flex align-items-center">
-                                                        <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(7)">
+                                                        <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(7)">
                                                             <i class="ri-file-excel-line"></i>
                                                         </button>
                                                     <div>
@@ -143,7 +143,7 @@
                                             </div>
                                         </div>
                                     </div><!-- end card header -->
-                                    <div class="card-body d-flex justify-content-center align-items-center" style="height: 155px;">
+                                    <div class="card-body d-flex justify-content-center align-items-center pb-0 " >
                                         <ngx-gauge 
                                             [value]="avgtrainhrs" 
                                             [min]="0" 
@@ -151,7 +151,7 @@
                                             [type]="'semi'"                                              
                                             [cap]="'butt'" 
                                             [thick]="30" 
-                                            [size]="200" 
+                                            [size]="220" 
                                             [foregroundColor]="'#54b4e4'">
                                             <ngx-gauge-value style="font-size:medium;font-weight: bold;">
                                               {{avgtrainhrs}}
@@ -173,13 +173,13 @@
                             <div class="card card-animate shadow-lg card-height-100">
                                 <div class="card-header p-2 d-flex justify-content-between align-items-center">
                                     <h4 class="card-title mb-0 fw-semibold">Staff House Occupancy</h4>
-                                    <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel" (click)="DownloadToExcel(8)">
+                                    <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel" (click)="DownloadToExcel(8)">
                                         <i class="ri-file-excel-line"></i>
                                     </button>
                                 </div>
                                 <!-- end card header -->
                         
-                                <div class="card-body pb-2" style="display: flex; justify-content: center; align-items: center; height: 165px;"> 
+                                <div class="card-body pb-2" style="display: flex; justify-content: center; align-items: center; "> 
                                     <circle-progress
                                         [percent]="Staff_Occupancy_Data"
                                         [radius]="60" 
@@ -218,7 +218,7 @@
                                         <div class="flex-grow-1 overflow-hidden">
                                             <p class="text-uppercase fw-medium mb-0 text-info">Active Employees</p>
                                         </div>
-                                        <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(2)">
+                                        <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(2)">
                                             <i class="ri-file-excel-line"></i>
                                         </button>
                                     </div>
@@ -245,7 +245,7 @@
                         <div class="flex-grow-1 overflow-hidden">
                             <p class="text-uppercase fw-medium mb-0 text-orange">Today's Open Positions</p>
                         </div>
-                        <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(3)">
+                        <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(3)">
                             <i class="ri-file-excel-line"></i>
                         </button>
                     </div>
@@ -271,7 +271,7 @@
                                         <div class="card-header align-items-center d-flex p-2">
                                             <h4 class="card-title mb-0 flex-grow-1 fw-semibold font-type">New Hires</h4>
                                             <div class="d-flex align-items-center">                                            
-                                                    <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(4)">
+                                                    <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(4)">
                                                         <i class="ri-file-excel-line"></i>
                                                     </button>
                                                 <select class="form-select form-select-sm font-type fs-11 me-1" style="width:150px"name="dept" [(ngModel)]="selectedDeptNewHires" (change)="FilterNewHires()">                                              
@@ -307,12 +307,12 @@
                                     <div class="card shadow-lg card-animate">
                                         <div class="card-header align-items-center d-flex p-2">
                                             <h4 class="card-title mb-0 flex-grow-1 fw-semibold">Average Performance</h4>
-                                            <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(6)">
+                                            <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(6)">
                                                 <i class="ri-file-excel-line"></i>
                                             </button>
                                         </div>
                                         <!-- end card header -->
-                                        <div class="card-body px-0 pt-0 pb-1">
+                                        <div class="card-body px-3 pt-0 pb-1">
                                             <div id="divPerformanceChart">                                                
                                                 <canvas id="PerformanceChart"></canvas>                                         
                                             </div> 
@@ -330,14 +330,14 @@
                                 <div class="card card-animate shadow-lg  card-height-100">
                                     <div class="card-header p-2 d-flex justify-content-between align-items-center">
                                         <h4 class="card-title mb-0 font-type fw-semibold">Overtime Hours</h4>
-                                        <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1" title="Download Excel" (click)="DownloadToExcel(9)">
+                                        <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1" title="Download Excel" (click)="DownloadToExcel(9)">
                                             <i class="ri-file-excel-line"></i>
                                         </button>
                                     </div>
                                     
                                     <!-- end card header -->
 
-                                    <div class="card-body pt-0 pb-0 p-0">
+                                    <div class="card-body pt-0 pb-2 p-2">
                                         <div id="divOvertimeChart">                                                
                                             <canvas id="OvertimeChart"></canvas>                                         
                                         </div>
@@ -371,7 +371,7 @@
                                         <div class="col-sm-auto">
                                             <div class="d-flex gap-1 flex-wrap">
                                                 <div class="d-flex align-items-center">                                            
-                                                    <button type="button" class="waves-effect waves-light btn btn-primary btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(10)">
+                                                    <button type="button" class="waves-effect waves-light btn btn-soft-success btn-sm fs-13 p-1 me-1" title="Download Excel"(click)="DownloadToExcel(10)">
                                                         <i class="ri-file-excel-line"></i>
                                                     </button>
                                                 <div>
@@ -401,7 +401,7 @@
                                     </div>
                                 </div><!-- end card header -->
 
-                                <div class="card-body pt-0 margin-up-7">
+                                <div class="card-body pt-0 ma-5">
                                     <div id="divAbsenteeismChart">                                                
                                         <canvas id="AbsenteeismChart"></canvas>                                         
                                     </div>
